--- a/src/index.html
+++ b/src/index.html
@@ -64,10 +64,10 @@
               <img src="./img/contact.svg" alt="Профиль" />
             </button>
           </div>
-          <adress class="aside__footer-info info">
+          <address class="aside__footer-info info">
             <a class="info__link" href="mailto:mail@cps.com">mail@cps.com</a>
             <a class="info__link" href="tel:+8 800 890 8900">8 800 890 8900</a>
-          </adress>
+          </address>
           <div class="aside__footer-lang lang">
             <button class="lang__btn">RU</button>
             <button class="lang__btn">EN</button>
@@ -184,51 +184,51 @@
               </h2>
             </header>
             <div class="swiper">
-              <ul class="swiper-wrapper brands__list">
+              <ul class="brands__list swiper-wrapper">
                 <li class="swiper-slide brands__item">
                   <img src="./img/lenovo.svg" alt="Lenovo" />
-                  <button class="brands__button" aria-label="Кнопка"></button>
+                  <button class="brands-button" aria-label="Кнопка"></button>
                 </li>
                 <li class="swiper-slide brands__item">
                   <img src="./img/samsung.svg" alt="Samsung" />
-                  <button class="brands__button" aria-label="Кнопка"></button>
+                  <button class="brands-button" aria-label="Кнопка"></button>
                 </li>
                 <li class="swiper-slide brands__item">
                   <img src="./img/apple.svg" alt="Apple" />
-                  <button class="brands__button" aria-label="Кнопка"></button>
+                  <button class="brands-button" aria-label="Кнопка"></button>
                 </li>
                 <li class="swiper-slide brands__item">
                   <img src="./img/vsonic.svg" alt="Viewsonic" />
-                  <button class="brands__button" aria-label="Кнопка"></button>
+                  <button class="brands-button" aria-label="Кнопка"></button>
                 </li>
                 <li class="swiper-slide brands__item">
                   <img src="./img/bosch.svg" alt="Bosch" />
-                  <button class="brands__button" aria-label="Кнопка"></button>
+                  <button class="brands-button" aria-label="Кнопка"></button>
                 </li>
                 <li class="swiper-slide brands__item">
                   <img src="./img/hp.svg" alt="HP" />
-                  <button class="brands__button" aria-label="Кнопка"></button>
+                  <button class="brands-button" aria-label="Кнопка"></button>
                 </li>
                 <li class="swiper-slide brands__item">
                   <img src="./img/acer.svg" alt="Acer" />
-                  <button class="brands__button" aria-label="Кнопка"></button>
+                  <button class="brands-button" aria-label="Кнопка"></button>
                 </li>
                 <li class="swiper-slide brands__item">
                   <img src="./img/sony.svg" alt="Sony" />
-                  <button class="brands__button" aria-label="Кнопка"></button>
+                  <button class="brands-button" aria-label="Кнопка"></button>
                 </li>
 
                 <li class="swiper-slide brands__item">
                   <img src="./img/lenovo.svg " alt="Lenovo" />
-                  <button class="brands__button" aria-label="Кнопка"></button>
+                  <button class="brands-button" aria-label="Кнопка"></button>
                 </li>
                 <li class="swiper-slide brands__item">
                   <img src="./img/samsung.svg" alt="Samsung" />
-                  <button class="brands__button" aria-label="Кнопка"></button>
+                  <button class="brands-button" aria-label="Кнопка"></button>
                 </li>
                 <li class="swiper-slide brands__item">
                   <img src="./img/apple.svg" alt="Apple" />
-                  <button class="brands__button" aria-label="Кнопка"></button>
+                  <button class="brands-button" aria-label="Кнопка"></button>
                 </li>
               </ul>
               <div class="swiper-pagination"></div>
@@ -238,8 +238,246 @@
             <img class="brands__all-img" src="./img/icon.svg" alt="Стрелки" />
             <span>Показать все</span>
           </button>
+
+          <section class="tech-repair">
+            <header class="tech-repair__header">
+              <h2 class="tech-repair__header-text">
+                Ремонт различных видов техники
+              </h2>
+            </header>
+            <div class="swiper">
+              <ul class="swiper-wrapper tech-repair__list">
+                <li class="swiper-slide tech-repair__item">
+                  <span class="tech-repair__text">Ремонт ноутбуков</span>
+                  <button
+                    class="brands-button tech-repair__button"
+                    aria-label="Кнопка"
+                  ></button>
+                </li>
+                <li class="swiper-slide tech-repair__item">
+                  <span class="tech-repair__text">Ремонт планшетов</span>
+                  <button
+                    class="brands-button tech-repair__button"
+                    aria-label="Кнопка"
+                  ></button>
+                </li>
+                <li class="swiper-slide tech-repair__item">
+                  <span class="tech-repair__text">Ремонт телефонов</span>
+                  <button
+                    class="brands-button tech-repair__button"
+                    aria-label="Кнопка"
+                  ></button>
+                </li>
+                <li class="swiper-slide tech-repair__item">
+                  <span class="tech-repair__text">Ремонт планшетов</span>
+                  <button
+                    class="brands-button tech-repair__button"
+                    aria-label="Кнопка"
+                  ></button>
+                </li>
+                <li class="swiper-slide tech-repair__item">
+                  <span class="tech-repair__text">Ремонт ноутбуков</span>
+                  <button
+                    class="brands-button tech-repair__button"
+                    aria-label="Кнопка"
+                  ></button>
+                </li>
+                <li class="swiper-slide tech-repair__item">
+                  <span class="tech-repair__text">Ремонт телефонов</span>
+                  <button
+                    class="brands-button tech-repair__button"
+                    aria-label="Кнопка"
+                  ></button>
+                </li>
+                <li class="swiper-slide tech-repair__item">
+                  <span class="tech-repair__text">Ремонт ноутбуков</span>
+                  <button
+                    class="brands-button tech-repair__button"
+                    aria-label="Кнопка"
+                  ></button>
+                </li>
+                <li class="swiper-slide tech-repair__item">
+                  <span class="tech-repair__text">Ремонт ноутбуков</span>
+                  <button
+                    class="brands-button tech-repair__button"
+                    aria-label="Кнопка"
+                  ></button>
+                </li>
+              </ul>
+              <div class="swiper-pagination"></div>
+            </div>
+          </section>
+          <button
+            type="button"
+            class="tech-repair__all"
+            aria-label="Показать всё"
+          >
+            <img
+              class="tech-repair__all-img"
+              src="./img/icon.svg"
+              alt="Стрелки"
+            />
+            <span>Показать все</span>
+          </button>
+          <section class="brands-price">
+            <header class="brands-price__header">
+              <h2 class="brands-price__header-text"> Цены на услуги </h2>
+            </header>
+            <div class="swiper">
+              <ul class="brands-price__list swiper-wrapper">
+                <li class="brands-price__item swiper-slide">
+                  <div class="brands-price__section">
+                    <p class="brands-price__card">Ремонтные услуги</p>
+                    <p class="brands-price__card">Цена</p>
+                    <p class="brands-price__card">Срок</p>
+                  </div>
+                </li>
+                <li class="brands-price__item swiper-slide">
+                  <div class="brands-price__section">
+                    <div class="brands-price__card">
+                      <p class="brands-price__title">Ремонтные услуги</p>
+                      <p class="brands-price__desc">Диагностика</p>
+                    </div>
+                    <div class="brands-price__card">
+                      <p class="brands-price__title">Цена</p>
+                      <p class="brands-price__desc">Бесплатно</p>
+                    </div>
+                    <div class="brands-price__card">
+                      <p class="brands-price__title">Срок</p>
+                      <p class="brands-price__desc">30-120мин</p>
+                    </div>
+                    <div class="brands-price__card">
+                      <button class="brands-price__btn"
+                        >заказать<span class="brands-price__img"></span
+                      ></button>
+                    </div>
+                  </div>
+                </li>
+                <li class="brands-price__item swiper-slide">
+                  <div class="brands-price__section">
+                    <div class="brands-price__card">
+                      <p class="brands-price__title">Ремонтные услуги</p>
+                      <p class="brands-price__desc">Замена дисплея</p>
+                    </div>
+                    <div class="brands-price__card">
+                      <p class="brands-price__title">Цена</p>
+                      <p class="brands-price__desc">1000рублей</p>
+                    </div>
+                    <div class="brands-price__card">
+                      <p class="brands-price__title">Срок</p>
+                      <p class="brands-price__desc">30-120мин</p>
+                    </div>
+                    <div class="brands-price__card">
+                      <button class="brands-price__btn"
+                        >заказать<span class="brands-price__img"></span
+                      ></button>
+                    </div>
+                  </div>
+                </li>
+                <li class="brands-price__item swiper-slide">
+                  <div class="brands-price__section">
+                    <div class="brands-price__card">
+                      <p class="brands-price__title">Ремонтные услуги</p>
+                      <p class="brands-price__desc"
+                        >Замена полифонического динамика</p
+                      >
+                    </div>
+                    <div class="brands-price__card">
+                      <p class="brands-price__title">Цена</p>
+                      <p class="brands-price__desc">1000рублей</p>
+                    </div>
+                    <div class="brands-price__card">
+                      <p class="brands-price__title">Срок</p>
+                      <p class="brands-price__desc">30-120мин</p>
+                    </div>
+                    <div class="brands-price__card">
+                      <button class="brands-price__btn"
+                        >заказать<span class="brands-price__img"></span
+                      ></button>
+                    </div>
+                  </div>
+                </li>
+                <li class="brands-price__item swiper-slide">
+                  <div class="brands-price__section">
+                    <div class="brands-price__card">
+                      <p class="brands-price__title">Ремонтные услуги</p>
+                      <p class="brands-price__desc"
+                        >Тестирование с выдачей технического заключения</p
+                      >
+                    </div>
+                    <div class="brands-price__card">
+                      <p class="brands-price__title">Цена</p>
+                      <p class="brands-price__desc">1000рублей</p>
+                    </div>
+                    <div class="brands-price__card">
+                      <p class="brands-price__title">Срок</p>
+                      <p class="brands-price__desc">30-120мин</p>
+                    </div>
+                    <div class="brands-price__card">
+                      <button class="brands-price__btn"
+                        >заказать<span class="brands-price__img"></span
+                      ></button>
+                    </div>
+                  </div>
+                </li>
+                <li class="brands-price__item swiper-slide">
+                  <div class="brands-price__section">
+                    <div class="brands-price__card">
+                      <p class="brands-price__title">Ремонтные услуги</p>
+                      <p class="brands-price__desc"
+                        >Замена программного обеспечения</p
+                      >
+                    </div>
+                    <div class="brands-price__card">
+                      <p class="brands-price__title">Цена</p>
+                      <p class="brands-price__desc">1000рублей</p>
+                    </div>
+                    <div class="brands-price__card">
+                      <p class="brands-price__title">Срок</p>
+                      <p class="brands-price__desc">30-120мин</p>
+                    </div>
+                    <div class="brands-price__card">
+                      <button class="brands-price__btn"
+                        >заказать<span class="brands-price__img"></span
+                      ></button>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+              <div class="swiper-pagination"></div>
+            </div>
+            <div class="brands-price__footer">
+              <p>
+                Все цены указаны с учетом НДС. Стоимость ремонта указана
+                <br />
+                на единичную услугу. Для получения коммерческого <br />
+                предложения на постоянное обслуживание, оставьте заявку.
+              </p>
+              <a class="brands-price__footer-link" href="#">
+                "Получить коммерческое предложение"
+              </a>
+            </div>
+          </section>
+
+          <footer>
+            <ul class="footer">
+              <li class="footer__item">
+                <p>© 2019 CPS Разработано командой Apesong</p>
+              </li>
+              <li class="footer__item">
+                <p> Политика конфиденциальности</p>
+              </li>
+              <li class="footer__item">
+                <p>
+                  Информация, размещенная на данной странице, не является
+                  публичной офертой
+                </p>
+              </li>
+            </ul>
+          </footer>
         </main>
       </div>
+
       <aside class="modal-form modal-feedback">
         <div class="modal-form__container">
           <button
@@ -305,27 +543,34 @@
         </div>
       </aside>
 
-      <!-- <aside class=" modal-form modal-call">
-            <div class="modal-form__container">
-                <button class="modal-form__close  modal-form__close--call menu-btn">
-                    <img src="./img/exit.svg" alt="Закрыть меню">
-                </button>
-                <h4 class="modal-call__title">Заказать звонок</h4>
-                <form class="modal-call__forms" action="#" method="post">
-                    <input class="modal-call__phone" type="tel" placeholder="Телефон">
-                </form>
-                <p class="modal-form__agreement">
-                    Нажимая "отправить", вы даете согласие на
-                    <a class="modal-form__link" href="#">обработку персональных данных</a>
-                    и соглашаетесь с нашей
-                    <a class="modal-form__link" href="#">политикой конфиденциальности</a>
-                </p>
-                <button class="modal-form__submit modal-form__submit--call button" type="submit">
-                    <span class="button__text">Отправить</span>
-                </button>
-            </div>
-        </aside> -->
-      <div class="overlay overlay--active"></div>
+      <aside class="modal-form modal-call">
+        <div class="modal-form__container">
+          <button class="modal-form__close modal-form__close--call menu-btn">
+            <img src="./img/exit.svg" alt="Закрыть меню" />
+          </button>
+          <h4 class="modal-call__title">Заказать звонок</h4>
+          <form class="modal-call__forms" action="#" method="post">
+            <input class="modal-call__phone" type="tel" placeholder="Телефон" />
+          </form>
+          <p class="modal-form__agreement">
+            Нажимая "отправить", вы даете согласие на
+            <a class="modal-form__link" href="#"
+              >обработку персональных данных</a
+            >
+            и соглашаетесь с нашей
+            <a class="modal-form__link" href="#"
+              >политикой конфиденциальности</a
+            >
+          </p>
+          <button
+            class="modal-form__submit modal-form__submit--call button"
+            type="submit"
+          >
+            <span class="button__text">Отправить</span>
+          </button>
+        </div>
+      </aside>
+      <div class="overlay"></div>
     </div>
   </body>
 </html>
