--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       <aside class="aside">
         <header class="aside__header">
           <button class="aside__header-close menu-btn">
-            <img src="./img/exit.svg" alt="">
+            <img src="./img/exit.svg" alt="Закрыть">
           </button>
           <a class="logo header__logo" href="#">
             <img src="./img/logo.svg" alt="Логотип">
           </a>
           <button class="aside__header-search menu-btn">
-            <img src="./img/loop.svg" alt="">
+            <img src="./img/loop.svg" alt="Поиск">
           </button>
         </header>
 
@@ -48,6 +48,7 @@
               <img src="./img/contact.svg" alt="Профиль">
             </button>
           </div>
+
           <address class="aside__footer-info info">
             <a class="info__link" href="mailto:mail@cps.com">mail@cps.com</a>
             <a class="info__link" href="tel:+8 800 890 8900">8 800 890 8900</a>
@@ -69,6 +70,7 @@
             <a href="#" class="logo menu__logo">
               <img src="./img/logo.svg" alt="Логотип">
             </a>
+
             <div class="menu__btns btns--menu">
               <button class="menu-btn menu-btn--call">
                 <img src="./img/phone.svg" alt="Звонок">
@@ -80,6 +82,7 @@
                 <img src="./img/contact.svg" alt="Профиль">
               </button>
             </div>
+
             <div class="menu__forms forms">
               <button class="forms__repair menu-btn">
                 <img src="./img/repair.svg" class="icon" alt="Настройки">
@@ -110,7 +113,7 @@
 
           <nav class="nav-menu">
             <ul class="nav-menu__items">
-              <li class="nav-menu__item"><a href="#"> Ремонтируемые бренды</a></li>
+              <li class="nav-menu__item"><a href="#">Ремонтируемые бренды</a></li>
               <li class="nav-menu__item"><a href="#">Ремонтируемые устройства </a></li>
               <li class="nav-menu__item"><a href="#">Дополнительные услуги</a></li>
               <li class="nav-menu__item"><a href="#">Цены на услуги</a></li>
@@ -127,7 +130,6 @@
                   техники Dell. Только у нас вы можете отремонтировать свой
                   ноутбук Dell с официальной гарантией производителя.
                 </p>
-
                 <p class="main-content__elem">Мы успешно работаем с 1992 года и заслужили репутацию
                   надежного партнера
                   <span class="main-content__elem-full">что подтверждает большое количество постоянных клиентов. Мы
@@ -150,6 +152,7 @@
                 Ремонт техники различных брендов
               </h2>
             </header>
+
             <div class="swiper">
               <ul class="brands__list swiper-wrapper">
                 <li class="swiper-slide brands__item">
@@ -184,7 +187,6 @@
                   <img src="./img/sony.svg" alt="Sony">
                   <button class="brands-button" aria-label="Кнопка"></button>
                 </li>
-
                 <li class="swiper-slide brands__item">
                   <img src="./img/lenovo.svg" alt="Lenovo">
                   <button class="brands-button" aria-label="Кнопка"></button>
@@ -212,6 +214,7 @@
                 Ремонт различных видов техники
               </h2>
             </header>
+
             <div class="swiper">
               <ul class="swiper-wrapper tech-repair__list">
                 <li class="swiper-slide tech-repair__item">
@@ -254,10 +257,12 @@
             <img class="tech-repair__all-img" src="./img/icon.svg" alt="Стрелки">
             <span>Показать все</span>
           </button>
+
           <section class="brands-price">
             <header class="brands-price__header">
               <h2 class="brands-price__header-text"> Цены на услуги </h2>
             </header>
+
             <div class="swiper">
               <ul class="brands-price__list swiper-wrapper">
                 <li class="brands-price__item swiper-slide">
@@ -282,7 +287,9 @@
                       <p class="brands-price__desc">30-120мин</p>
                     </div>
                     <div class="brands-price__card">
-                      <button class="brands-price__btn">заказать<span class="brands-price__img"></span></button>
+                      <button class="brands-price__btn">заказать
+                        <span class="brands-price__img"></span>
+                      </button>
                     </div>
                   </div>
                 </li>
@@ -301,7 +308,9 @@
                       <p class="brands-price__desc">30-120мин</p>
                     </div>
                     <div class="brands-price__card">
-                      <button class="brands-price__btn">заказать<span class="brands-price__img"></span></button>
+                      <button class="brands-price__btn">заказать
+                        <span class="brands-price__img"></span>
+                      </button>
                     </div>
                   </div>
                 </li>
@@ -320,7 +329,9 @@
                       <p class="brands-price__desc">30-120мин</p>
                     </div>
                     <div class="brands-price__card">
-                      <button class="brands-price__btn">заказать<span class="brands-price__img"></span></button>
+                      <button class="brands-price__btn">заказать
+                        <span class="brands-price__img"></span>
+                      </button>
                     </div>
                   </div>
                 </li>
@@ -339,7 +350,9 @@
                       <p class="brands-price__desc">30-120мин</p>
                     </div>
                     <div class="brands-price__card">
-                      <button class="brands-price__btn">заказать<span class="brands-price__img"></span></button>
+                      <button class="brands-price__btn">заказать
+                        <span class="brands-price__img"></span>
+                      </button>
                     </div>
                   </div>
                 </li>
@@ -358,13 +371,16 @@
                       <p class="brands-price__desc">30-120мин</p>
                     </div>
                     <div class="brands-price__card">
-                      <button class="brands-price__btn">заказать<span class="brands-price__img"></span></button>
+                      <button class="brands-price__btn">заказать
+                        <span class="brands-price__img"></span>
+                      </button>
                     </div>
                   </div>
                 </li>
               </ul>
               <div class="swiper-pagination"></div>
             </div>
+
             <div class="brands-price__footer">
               <p>
                 Все цены указаны с учетом НДС. Стоимость ремонта указана
@@ -403,6 +419,7 @@
             <img src="./img/exit.svg" alt="Закрыть меню">
           </button>
           <h4 class="modal-feedback__title">Обратная связь</h4>
+
           <ul class="modal-feedback__items">
             <li class="modal-feedback__item">
               <form class="modal-feedback__forms" action="#" method="post">
@@ -421,16 +438,19 @@
             </li>
             <li class="modal-feedback__item">
               <form class="modal-feedback__forms" action="#" method="post">
-                <textarea class="modal-feedback__input modal-feedback__input--big" type="message" placeholder="Сообщение"></textarea>
+                <textarea class="modal-feedback__input modal-feedback__input--big" type="message" placeholder="Сообщение">
+                </textarea>
               </form>
             </li>
           </ul>
+
           <p class="modal-form__agreement">
             Нажимая "отправить", вы даете согласие на
             <a class="modal-form__link" href="#">обработку персональных данных</a>
             и соглашаетесь с нашей
             <a class="modal-form__link" href="#">политикой конфиденциальности</a>
           </p>
+
           <button class="modal-form__submit modal-form__submit--call button" type="submit">
             <span class="button__text">Отправить</span>
           </button>
